# pycon-2025-event-sourcing

./: .gitignore  .kurrentdb.env  README.md  exercise-01-start-game.md  exercise-02-play-the-game.md  exercise-03-persist-the-events.md  pyproject.toml  requirements.txt
.internal/solutions/connect_four_solutions/exercise_01/: cli.py
.internal/solutions/connect_four_solutions/exercise_02/: cli.py
.internal/solutions/connect_four_solutions/exercise_03/: cli.py
.internal/solutions/connect_four_solutions/helpers/: __init__.py
.internal/solutions/tests/: test_helpers.py
.internal/solutions/tests/exercise_01/: test_game.py
.internal/solutions/tests/exercise_02/: test_game.py
.internal/solutions/tests/exercise_03/: conftest.py  test_game.py  test_game_repository.py
connect_four/exercise_01/: cli.py
connect_four/exercise_01/domain/: events.py
connect_four/exercise_02/: cli.py
connect_four/exercise_02/domain/: board.py  enums.py  game.py
connect_four/exercise_02/presentation/: board.py
connect_four/exercise_03/: __init__.py  cli.py
connect_four/exercise_03/application/: application.py  repository.py
connect_four/exercise_03/domain/: board.py  events.py  game.py
connect_four/exercise_03/persistence/: game_repository.py
connect_four/exercise_03/presentation/: board.py
connect_four/helpers/: in_memory_client.py
tests/: conftest.py  test_helpers.py
tests/exercise_01/: test_game.py
tests/exercise_02/: test_game.py
tests/exercise_03/: conftest.py  test_game.py  test_game_repository.py
(+13 files in other folders)
